# metaArray

./: .gitignore  MANIFEST.in  README  README.md  __init__.py  core.py  drv_h5py.py  drv_pylab.py  misc.py  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
example/: DPO2000.csv  DPO2000.isf  DPO3000.isf  TDS2000.csv  june10j.flxhst  rel_amplitude.pickle  wfm2isf.isf
metaArray/: __init__.py  constants.py  core.py  drv_Tek.py  drv_csv.py  drv_flex.py  drv_fortran.py  drv_h5py.py  drv_hp4294a.py  drv_pylab.py  drv_ritec.py  example.py  metaFunc.py  metaTrans.py  misc.py  version.py
metaArray/example/: DPO4000B.isf  multi_1.isf
metaArray_py2/: __init__.py  drv_flex.py  drv_pylab.py  drv_ritec.py  example.py  metaTrans.py  misc.py
metaArray_py2/example/: 2D_Al_10_Avg.flxhst  multi_2.isf
src/metaArray/: __init__.py  core.py  drv_Tek.py  drv_csv.py  drv_flex.py  drv_fortran.py  drv_h5py.py  drv_hp4294.py  drv_pylab.py  drv_ritec.py  example.py  metaFunc.py  metaTrans.py  misc.py
src/metaArray/example/: multi_3.isf
tests/: test_core.py  test_io.py
