[tool.poetry]
name = "metaarray"
version = "2.0.1"
description = "Meta-info container for numpy ndarray, with associate libraries"
authors = [ "Sam Hill <s.hill@yorksj.ac.uk>" ]
license = "GPL-2.0-only"
readme = "README.md"
packages = [{include = "metaArray", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
numpy = ">=1.21"
scipy = ">=1.7"
matplotlib = ">=3.4"
h5py = ">=3.4"
pyserial = ">=3.4"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.1"
pytest-cov = ">=2.12"
tox = ">=3.24"
flake8 = ">=5.0"
flake8-pyproject = ">=1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

[tool.flake8]
per-file-ignores = [
    'src/metaArray/__init__.py:F401',
    'src/metaArray/drv_hp4294.py:E221',
]
