[metadata]
name = metaArray
version = attr: metaArray.__version__
description = Meta-info container for numpy ndarray, with associate libraries
long_description = file: README.md,
author = Sam Hill, Charley (Yichao) Fan
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    metaArray
install_requires =
    numpy>=1.21
    scipy>=1.7
    matplotlib>=3.4
    h5py>=3.4
    pyserial>=3.4

python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.1
    pytest-cov>=2.12
    tox>=3.24
	flake8>=5.0

[flake8]
ignore = F401, E226
max-line-length = 160